--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">TestTask</string>
     <string name="profile_image">Profile Image\n</string>
     <string name="user_details">User Details</string>
+    <string name="users">Users</string>
+    <string name="full_name">Full Name:</string>
+    <string name="email">Email:</string>
+    <string name="website">Website:</string>
+    <string name="phone">Phone:</string>
+    <string name="edit_user">Edit User</string>
 </resources>
